--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,59 @@
 .App {
   text-align: center;
+  background: lightgreen;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.topbar, .bottombar {
+  height: 22px;
+  line-height: 20px;
+  background-color: lavender;
+  padding: 5px 20px;
+  text-align: left;
+  text-shadow: 1px 1px rgba(0,0,0,.1);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.thinbar {
+  height: 10px;
+  background-color: purple;
 }
 
-.App-link {
-  color: #61dafb;
+.thisthat {
+  cursor: pointer;
+  color: navy;
+  font-size: 72px;
+  font-weight: bold;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.refresh {
+  background: lavender;
+  color: grey;
+  font-size: 26px;
+  line-height: 30px;
+  font-family: Tahoma, sans-serif;
 }
+
+.bottom-text {
+  color: grey;
+  font-size: 12px;
+  font-family: Tahoma, sans-serif;
+}
+
+.container {
+  margin: 10px;
+}
+
+.display-container, .container {
+  position: relative;
+}
+
+.padding{padding: 16px}
+.small-padding{padding: 8px}
+
+.display-topright{position:absolute;right:0;top:0}
+.display-bottomright{position:absolute;right:0;bottom:0}
+.display-left{position:absolute;top:50%;left:0%;transform:translate(0%,-50%);-ms-transform:translate(-0%,-50%)}
+.display-right{position:absolute;top:50%;right:0%;transform:translate(0%,-50%);-ms-transform:translate(0%,-50%)}
+
+html,body {font-family: Tahoma, sans-serif;font-size: 15px;line-height: 1.5;display: block;text-transform: uppercase;text-align: center;}html{overflow-x:hidden}
+h1{font-size:40px}h2{font-size:34px}h3{font-size: 28px;color: navy;}
+h1,h2,h3 {font-family: Tahoma, sans-serif;font-weight: 400;margin: 10px 0}
